# GrapheryV2-Django

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  pyproject.toml
.run/: dev-docker-env.run.xml  dev.run.xml  mkdir-test-env.run.xml  project-pytest.run.xml
graphery/: manage.py  pytest.ini
graphery/backend/: admin.py  schema.py
graphery/backend/baker_recipes/: __init__.py  code_recipe.py  execution_result_recipe.py  graph_recipe.py  make_test_examples.py  make_test_users.py  tag_recipe.py  tutorial_recipe.py  uploads_recipe.py  user_recipe.py
graphery/backend/data_bridge/: __init__.py  base.py  code_bridge.py  execution_result_bridge.py  graph_bridge.py  tag_bridge.py  tutorial_bridge.py  user_bridge.py  version_handlers.py
graphery/backend/executor_runner/: __init__.py  executor_connect.py  types.py
graphery/backend/migrations/: 0001_add_user.py  0002_add_tag_anchor.py  0003_make_char_field_non_null_and_use_unique_constraint.py  0004_add_tutorial.py  0005_add_graph.py  0006_add_code.py  0007_add_execution_result.py  0008_add_graph_order.py  0009_add_uploads.py  0010_auto_20220321_0024.py  0011_auto_20220321_0053.py  0012_auto_20220321_0555.py  0013_auto_20220324_0739.py  0014_alter_user_role.py  0015_change_lang_code_naming.py  0016_use_slug_field_for_urls.py  0017_add_mixins_to_ordered_graph_anchor.py  0018_fix_graph_order_type.py  0019_rename_ordered_graph_anchor.py  (+8 more)
graphery/graphery/: asgi.py  settings.py  urls.py  wsgi.py
setups/test-db/: docker-compose.yml  init.sql
setups/test-env/: Dockerfile  docker-compose.yml  init.sql
(+59 files in other folders)
