[tool.poetry]
name = "graphery"
version = "2.0.0"
description = ""
authors = ["Larry Zeng <graphery@reed.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
django = "~=3.2"
django-cors-headers = "*"
psycopg2-binary = "*"
strawberry-graphql = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-django = "*"
black = "*"
model-bakery = "*"
pytest-asyncio = "^0.18.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
