[tool.poetry]
name = "graphery"
version = "2.0.0"
description = ""
authors = ["Larry Zeng <graphery@reed.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.10"
django = "~=4.0"
django-cors-headers = "*"
psycopg2-binary = "*"
strawberry-graphql = "*"
strawberry-graphql-django = "*"
black = "*"
graphery-executor = {git = "https://github.com/Reed-CompBio/GrapheryExecutor.git"}
requests = "^2.28.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-django = "*"
model-bakery = "*"
pytest-asyncio = "^0.18.2"
pre-commit = "^2.19.0"
coverage = "^6.4.2"

[build-system]
requires = ["poetry-core>=1.1.0b2"]
build-backend = "poetry.core.masonry.api"
